<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8282FF"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:id="@+id/calculatorText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@color/white"
                android:gravity="center"
                android:text="TextView"
                android:textAlignment="textStart"
                android:textSize="28sp"
                tools:ignore="RtlCompat" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp">

            <com.example.calculator.RoundRectButton
                android:id="@+id/clearButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:layout_weight="3"
                android:gravity="center"
                android:text="@string/clearButtonText"
                android:textAlignment="center"
                android:textSize="28sp"
                app:btn_background_color="@color/white"
                app:btn_text_color="@color/black" />

            <com.example.calculator.RoundRectButton
                android:id="@+id/divisionButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/divisionButtonText"
                android:textAlignment="center"
                android:textSize="28sp"
                app:btn_background_color="@color/white"
                app:btn_text_color="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp">

            <com.example.calculator.RoundRectButton
                android:id="@+id/sevenButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/sevenButtonText"
                android:textAlignment="center"
                android:textSize="28sp"
                app:btn_background_color="@color/white"
                app:btn_text_color="@color/black" />

            <com.example.calculator.RoundRectButton
                android:id="@+id/eightButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/eightButtonText"
                android:textAlignment="center"
                android:textSize="28sp"
                app:btn_background_color="@color/white"
                app:btn_text_color="@color/black" />

            <com.example.calculator.RoundRectButton
                android:id="@+id/nineButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/nineButtonText"
                android:textAlignment="center"
                android:textSize="28sp"
                app:btn_background_color="@color/white"
                app:btn_text_color="@color/black" />

            <com.example.calculator.RoundRectButton
                android:id="@+id/multiplicationButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/multiplicationButtonText"
                android:textAlignment="center"
                android:textSize="28sp"
                app:btn_background_color="@color/white"
                app:btn_text_color="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp">

            <com.example.calculator.RoundRectButton
                android:id="@+id/fourButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/fourButtonText"
                android:textAlignment="center"
                android:textSize="28sp"
                app:btn_background_color="@color/white"
                app:btn_text_color="@color/black" />

            <com.example.calculator.RoundRectButton
                android:id="@+id/fiveButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/fiveButton"
                android:textAlignment="center"
                android:textSize="28sp"
                app:btn_background_color="@color/white"
                app:btn_text_color="@color/black" />

            <com.example.calculator.RoundRectButton
                android:id="@+id/sixButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/sixButtonText"
                android:textAlignment="center"
                android:textSize="28sp"
                app:btn_background_color="@color/white"
                app:btn_text_color="@color/black" />

            <com.example.calculator.RoundRectButton
                android:id="@+id/minusButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/minusButton"
                android:textAlignment="center"
                android:textSize="28sp"
                app:btn_background_color="@color/white"
                app:btn_text_color="@color/black" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp">

            <com.example.calculator.RoundRectButton
                android:id="@+id/oneButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/oneButton"
                android:textAlignment="center"
                android:textSize="28sp"
                app:btn_background_color="@color/white"
                app:btn_text_color="@color/black" />

            <com.example.calculator.RoundRectButton
                android:id="@+id/twoButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/twoButtonText"
                android:textAlignment="center"
                android:textSize="28sp"
                app:btn_background_color="@color/white"
                app:btn_text_color="@color/black" />

            <com.example.calculator.RoundRectButton
                android:id="@+id/threeButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/threeButtonText"
                android:textAlignment="center"
                android:textSize="28sp"
                app:btn_background_color="@color/white"
                app:btn_text_color="@color/black" />

            <com.example.calculator.RoundRectButton
                android:id="@+id/plusButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/plusButton"
                android:textAlignment="center"
                android:textSize="28sp"
                app:btn_background_color="@color/white"
                app:btn_text_color="@color/black" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp">

            <com.example.calculator.RoundRectButton
                android:id="@+id/zeroButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:layout_weight="3"
                android:gravity="center"
                android:text="@string/zeroButtonText"
                android:textAlignment="center"
                android:textSize="28sp"
                app:btn_background_color="@color/white"
                app:btn_text_color="@color/black" />

            <com.example.calculator.RoundRectButton
                android:id="@+id/equalButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/equalButtonText"
                android:textAlignment="center"
                android:textSize="28sp"
                app:btn_background_color="@color/white"
                app:btn_text_color="@color/black" />

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
